criado Empresa buscaEmpresa CadastrarEmpresa index

--- a/web/index.html
+++ b/web/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <html>
     <head>
-        <title>TODO supply a title</title>
         <meta charset="UTF-8">
+        <title>Bem vindo!</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>Homepage do Serafim</div>
+        <div style="margin-bottom: 30px;">Homepage do Serafim</div>
+        <form action="busca" method="post">
+            <label>Sua empresa: </label>
+            <input type="text" name="filtro" />
+            <input type="submit" value="Buscar" />
+        </form>
+        <form action="cadastra" method="post">
+            <label>Digite sua empresa: </label>
+            <input type="text" name="empresa" />
+            <input type="submit" value="Cadastrar" />
+        </form>
     </body>
 </html>
